# genflow-ad-studio

./: .env.example  .gitignore  AGENTS.md  Makefile
backend/: main.py  pyproject.toml
backend/app/: config.py  dependencies.py
backend/app/agents/: coordinator.py  tools.py
backend/app/ai/: gemini_image.py  universal_llm.py
backend/app/api/: chat.py  input.py
backend/app/services/: avatar_service.py  brand_qc_integration.py  input_service.py  pipeline_service.py  qc_service.py  script_service.py
backend/app/storage/: local.py
backend/app/utils/: bootstrap.py  observability.py  paths.py
backend/output/samples/: samples.json
backend/scripts/: generate_samples.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/api/: client.ts  sse.ts
frontend/src/components/layout/: AgentCopilot.tsx  AppBar.tsx  Footer.tsx  InsightPanel.tsx  MainLayout.tsx
frontend/src/components/pages/: HowItWorksPage.tsx
frontend/src/components/pipeline/: ProductForm.tsx
frontend/src/constants/: controls.ts
frontend/src/hooks/: usePipeline.ts
frontend/src/lib/: briefHandoff.ts  url.ts
frontend/src/types/: index.ts
scripts/: _doppler_push.py  setup-doppler.sh  smoke_agent.py
